--- a/style1.css
+++ b/style1.css
@@ -1,9 +1,8 @@
-body {
-                    background-color: black;
-                }
-        h1{
-            color:gray;
-        }
-        p{ color:gray
-            }
+ h1 {
+            color: rgb(0, 232, 15);
+        }  
         
+        body {
+            background-color: rgb(97, 250, 255);
+        }
+           
