--- a/style1.css
+++ b/style1.css
@@ -1,8 +1,8 @@
  h1 {
-            color: rgb(0, 230, 15);
+            color: rgb(255, 255, 255);
         }  
         
         body {
-            background-color: rgb(97, 250, 255);
+            background-color: rgb(0,0,0);
         }
            
