--- a/style1.css
+++ b/style1.css
@@ -9,3 +9,28 @@
 p{
 color: rgb(255, 255, 255);
 }
+
+ body{background-image:url(myBackground.jpg);}
+            h1{ color:white;
+            }
+            p{color:white;}
+            #mom{ float:left;
+                margin-right:15px;
+              }
+              #yes{float:right;
+              margin-left:15px;}
+              
+              #home{ float:left;
+                margin-right:15px;
+            }
+            
+            #java{float:right;
+                margin-left:15px;
+                margin-right:15px;
+            }
+          
+            #about{ float:right;
+               margin-left:15px;
+              
+            }
+             
