--- a/style2.css
+++ b/style2.css
@@ -9,10 +9,10 @@
               #yes{float:right;
               margin-left:15px;}
 
-              #fish{ float:left;
+              #car{ float:left;
                 margin-right:15px;
               }
-              #car{float:right;
+              #fish{float:right;
               margin-left:15px;}
 
               #home{ float:left;
